--- a/Publisher/src/org/red5/samples/publisher/view/monitor/MonitorAppBar.mxml
+++ b/Publisher/src/org/red5/samples/publisher/view/monitor/MonitorAppBar.mxml
@@ -5,13 +5,14 @@
 	<mx:Image source="{ main.images.monitor_img }"/>
 			
 	<mx:VBox paddingTop="3" paddingLeft="-1">
-		<mx:Label text="Monitor" fontWeight="bold" fontSize="12"/>
+		<mx:Label text="监视器" fontWeight="bold" fontSize="12"/>
 	</mx:VBox>
 	
 	<mx:Spacer width="75"/>
 	
+	<!--
 	<mx:TabBar paddingBottom="-7" itemClick="changeMonitorView( event )"
 			   dataProvider="{ navigation.monitorMenu }"
-			   selectedIndex="{ navigation.monitorBarIndex }"/>
+			   selectedIndex="{ navigation.monitorBarIndex }"/>-->
 		
 </view:MonitorAppBarClass>
