--- a/Publisher/src/org/red5/samples/publisher/view/user/UserDisplay.mxml
+++ b/Publisher/src/org/red5/samples/publisher/view/user/UserDisplay.mxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <view:UserDisplayClass xmlns:mx="http://www.adobe.com/2006/mxml"
-					  xmlns:view="org.red5.samples.publisher.view.user.*">
-	<mx:Box>
-		<mx:TextArea id="user_txt"
-					 borderColor="0xD0D0D0"
-					 width="100%" height="100%" borderStyle="solid"  
-					 textIndent="6" fontSize="10" focusEnabled="false"
-					 editable="false"/>
-	</mx:Box>
-	<mx:Box>
-		<!-- DATAGRID -->
-	</mx:Box>
+		  			   xmlns:util="org.red5.ui.*"
+					   xmlns:view="org.red5.samples.publisher.view.user.*">
 	
+		<mx:VBox width="100%" height="100%">
+			<mx:HBox width="100%">
+				
+			</mx:HBox>
+		</mx:VBox>
+			
 </view:UserDisplayClass>
